login with google

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -2,6 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(360deg);
+        }
+    }
+
+    .spin {
+        animation: spin 1s linear infinite;
+    }
+}
+
 @layer utilities {
     .roboto-thin {
         font-family: 'Roboto', sans-serif;
