--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -15,6 +15,34 @@
     .spin {
         animation: spin 1s linear infinite;
     }
+
+    .parent:hover > .children {
+        display: block;
+    }
+
+    .children {
+        animation: hoverParent 0.5s linear;
+    }
+
+    .children:before {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 20px;
+        top: -5%;
+        color: black;
+    }
+
+    @keyframes hoverParent {
+        from {
+            opacity: 0;
+            transform: translateY(-10px);
+        }
+        to {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
 }
 
 @layer utilities {
