--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -70,6 +70,19 @@
         transition: width 0.4s ease;
     }
 
+    .nav-link.active::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        margin: auto;
+        height: 2px;
+        width: 100%;
+        background-color: #386cb2;
+        transition: width 0.4s ease;
+    }
+
     .nav-link:hover::after {
         width: 100%;
     }
